<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/card_margin"
    android:focusableInTouchMode="true">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_create_project_title_layout"
        android:layout_marginBottom="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_create_project_title"
            android:hint="@string/editText_create_project_hint_title"
            android:singleLine="true"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_create_project_description_layout"
        android:layout_below="@+id/editText_create_project_title_layout"
        app:counterEnabled="true"
        app:counterMaxLength="2000"
        android:layout_marginBottom="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_create_project_description"
            android:hint="@string/editText_create_project_hint_description"
            android:maxLines="4"
            android:maxLength="2000"

            />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear_layout_create_project_button_dead"
        android:layout_below="@+id/editText_create_project_description_layout"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="15dp"
        >
        <TextView
            android:id="@+id/textView_button_create_project_deadline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"

            android:text="@string/textView_create_project_buttondeadline"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/button_create_project_deadline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_create_project_buttondeadline_text"
            style="@style/button"
            android:layout_weight="1"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_create_project_buttonAddParticipant"
        android:orientation="horizontal"
        android:layout_below="@+id/linear_layout_create_project_button_dead"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp">


        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textView_create_project__add_participant"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/imageButton_create_project_add_person"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            app:srcCompat="@drawable/ic_person_add_black_24dp"
            android:background="@color/white"
            android:contentDescription="@string/textView_create_project__add_participant"
            android:layout_weight="1"/>

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_project_participant_email_list"
        android:layout_below="@+id/linear_layout_create_project_buttonAddParticipant"/>

</RelativeLayout>