<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bricenangue.insyconn.e_workers.activity.LoginActivity">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login_Activity_textview_Login_Title"
            android:layout_centerHorizontal="true"
            android:id="@+id/textViewTitle"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonLoginPhone"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />

        <Button
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:id="@+id/buttonLoginPhone"
            android:onClick="onPhoneLogin"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:layout_below="@+id/textViewTitle"
            style="@style/button"
            android:text="@string/Login_Activity_button_phone"
            android:drawableLeft="@drawable/ic_phone_white_24dp"
            android:drawableStart="@drawable/ic_phone_white_24dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            android:layout_marginBottom="34dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonLoginEmail" />

        <Button
            android:layout_width="328dp"
            android:layout_height="45dp"
            android:id="@+id/buttonLoginEmail"
            android:layout_below="@+id/buttonLoginPhone"
            android:onClick="onEmailLogin"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            style="@style/button"
            android:text="@string/Login_Activity_button_email"
            android:drawableStart="@drawable/ic_email_white_24dp"
            android:drawableLeft="@drawable/ic_email_white_24dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="144dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonGoToPortal"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.987" />

        <View
            android:layout_width="368dp"
            android:layout_height="2dp"
            android:id="@+id/loginActivityDivider"
            android:background="@color/colorDivider"
            android:layout_centerInParent="true"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonGoToPortal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonLoginEmail"
            app:layout_constraintHorizontal_bias="0.0" />


        <Button
            android:layout_width="328dp"
            android:layout_height="45dp"
            android:id="@+id/buttonGoToPortal"
            android:layout_below="@+id/loginActivityDivider"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingRight="5dp"
            android:paddingEnd="5dp"
            style="@style/button"
            android:text="@string/Login_Activity_button_go_to_portal"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="109dp" />


</android.support.constraint.ConstraintLayout>
