<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bricenangue.insyconn.e_workers.activity.HomePageActivity"
    tools:showIn="@layout/app_bar_home_page">




    <Button
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:id="@+id/buttonLogTime"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        style="@style/button"
        android:text="@string/HomePageActivity_button_log"
        android:layout_marginLeft="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="28dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.95"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:onClick="onTimeLogger"/>

    <TextView
        android:id="@+id/textView_hompage_logIn_timeOfDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_hompage_logIn_timeOfDay"
        tools:text="Logged in at :"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="28dp" />

    <TextView
        android:id="@+id/textView_hompage_logIn_since_text"
        android:layout_width="149dp"
        android:layout_height="41dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="89dp"
        android:text="@string/textView_hompage_logIn_timeOfDay_default_text"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginEnd="28dp"
        tools:layout_editor_absoluteX="207dp"
        android:gravity="end"/>

    <TextView
        android:id="@+id/textView_hompage_logIn_timeOfDay_default_text"
        android:layout_width="144dp"
        android:layout_height="41dp"
        android:layout_marginTop="28dp"
        android:text="@string/textView_hompage_logIn_timeOfDay_default_text"
        android:textColor="@color/grey_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginRight="28dp"
        android:layout_marginEnd="28dp"
        tools:layout_editor_absoluteX="212dp"
        android:gravity="end"/>

    <TextView
        android:id="@+id/textView_hompage_logIn_since"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_hompage_logIn_since"
        tools:text="Logged in since :"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="28dp"
        android:layout_marginTop="89dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="28dp" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/grey_light"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_hompage_logIn_since_text"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
